--- a/Front/package.json
+++ b/Front/package.json
@@ -11,6 +11,7 @@
     "framer-motion": "^10.16.4",
     "http-proxy-middleware": "^2.0.6",
     "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.46.2",
